[metadata]
name = pdfToImage
version = 1.1.2
description = PDF file to Images conversion
long_description = file:README.md
long_description_content_type = text/markdown
author = Praneet Nigam
author_email = nigampraneet460@gmail.com
url = https://github.com/Praneet460
python_requires = >=3.5
include_package_data = True
install_requires = 
    urllib3
    requests
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
packages = find: